fix centering/alignment of navigation bars

--- a/ui/css/global-nav.css
+++ b/ui/css/global-nav.css
@@ -33,14 +33,17 @@ a.new-site-header--homepage {
 	text-transform: uppercase;
 	letter-spacing: 0.06em;
 	background: #fff;
+	margin-top: 0 !important;
+	padding-top: 15px !important;
 }
 
 ul#nav-bar {
-	grid-column: 2 / -2;
+	grid-column: 1 / -1;
 	background: #fff;
 	margin-right: auto;
-	margin-left: auto; /* still not centred */
+	margin-left: auto;
 	margin-bottom: 10px;
+	padding: 0;
 }
 
 ul#nav-bar li {
@@ -128,25 +131,39 @@ ul#nav-bar li label:hover {
 
 .new-site-header__logo-block {
 	display: grid;
-	grid-template-columns: 170px 1fr 300px 1fr 170px !important;
+	grid-template-columns: 150px 1fr 300px 1fr 150px !important;
 	grid-column-gap: var(--gutter-column);
 	grid-row-gap: 0;
 	align-items: center;
 	/*justify-items: center;*/
 	margin: 0 auto;
 	width: auto;
-	max-width: 850px;
+	/*max-width: 850px;*/
 	padding-top: 3rem;
-	padding-left: var(--page-margin-sides);
-	padding-right: var(--page-margin-sides);
+	
 	/*background: var(--yellow);*/
 	padding-bottom: 28px; /* balances grid alignment *!/*/
+}
+
+@media screen and (max-width: 1200px) {
+	.new-site-header__logo-block {
+		padding-left: var(--page-margin-sides);
+		padding-right: var(--page-margin-sides);
+	}
+}
+
+@media screen and (min-width: 1201px) {
+	.new-site-header__logo-block {
+		max-width: 772px;
+		grid-template-columns: 150px 1fr 300px 1fr 150px !important;
+	}
 }
 
 .new-site-header__tagline {
 	/*margin-top: calc(.3rem + 2vw);*/
 	grid-column: 1;
 	width: 170px;
+	justify-self: start;
 }
 
 .new-site-header__logo {
@@ -155,6 +172,7 @@ ul#nav-bar li label:hover {
 	width: 100%;
 	height: 100%;
 	max-height: 60px;
+	justify-self: center;
 }
 
 .new-site-header__logo a {
@@ -164,7 +182,7 @@ ul#nav-bar li label:hover {
 }
 
 .new-site-header__logo img {
-	width: 30vw;
+	/*width: 30vw;*/
 	max-height: 60px;
 }
 
@@ -177,6 +195,8 @@ ul#nav-bar li label:hover {
 .new-site-header__menu-toggle {
 	grid-column: 5;
 	text-align: right;
+	justify-self: end;
+	align-self: center;
 }
 
 .new-nav__burger {
